# hackMeridian

./: .gitignore  README-ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: main.yml
admin_web/: QR_VALIDATION_README.md  README.md  index.html  package-lock.json  package.json  test-qr.js  vite.config.ts
admin_web/src/: App.tsx  index.css  main.tsx
admin_web/src/components/: MaterialNotification.tsx  WebcamScanner.tsx  blockchain-icon.tsx  material-select.tsx  qr-scanner.tsx  syringe-icon.tsx  vaccination-lists.tsx
admin_web/src/styles/: globals.css  material-theme.css
admin_web/src/utils/: stellar-validation.ts
backend/: .env.example  CONTRACT_SETUP.md  README.md  check-admin.ts  package-lock.json  package.json  pyproject.toml  test-api.sh  tsconfig.json  vaccine.db
backend-express-ts/: README.md
backend/app/: main.py
backend/app/api/routers/: user.py  vaccine.py
backend/app/core/: config.py
backend/app/models/: user_kyc.py  user_kyc_entity.py  vaccination_token.py  vacination_token.py
backend/app/services/: database_service.py  stellar_service.py  user_service.py
backend/src/: index.ts  server.js  simple-server.js
backend/src/models/: user_kyc.ts
backend/src/routes/: appointments.js  user.ts  users.js  vaccinations.js
backend/src/services/: database_service.ts  stellar_service.ts  user_service.ts
contract/: README.md
docs/: README.md
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx
user/assets/: paleta.md
user/frontend/: README.md  main.dart  pubspec.yaml
(+56 files in other folders)
