[project]
name = "backend"
version = "0.1.0"
description = "backend do projeto"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "stellar-sdk>=13.0.0",
    "ty>=0.0.1a20",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.35",
    "soroban>=0.9.1",
]
